--- a/.github/workflows/main_azure-chatgpt-test-app-w372bkahktzpe.yml
+++ b/.github/workflows/main_azure-chatgpt-test-app-w372bkahktzpe.yml
@@ -14,21 +14,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
 
       - name: Set up Node.js version
-        uses: actions/setup-node@v1
+        uses: actions/setup-node@v3
         with:
           node-version: '18.x'
 
       - name: npm install, build, and test
         run: |
+          cd ./src
           npm install
           npm run build --if-present
           npm run test --if-present
-
+          cd ..
       - name: Upload artifact for deployment job
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: node-app
           path: .
@@ -42,7 +43,7 @@ jobs:
 
     steps:
       - name: Download artifact from build job
-        uses: actions/download-artifact@v2
+        uses: actions/download-artifact@v3
         with:
           name: node-app
 
